Position elements side-by-side with inline display

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,11 @@ a {
     color: #093a58;
 }
 
+.name a,
+.main-nav a {
+    padding: 10px 15px;
+}
+
 /* ---- Layout Containers ---- */
 
 .container {
@@ -94,6 +99,17 @@ a {
         width: 80%;
         max-width: 1150px;
         margin: 0 auto;
+    }
+
+    .name,
+    .main-nav,
+    .main-nav li {
+        display: inline;
+    }
+
+    .name {
+        width: 240px;
+        margin-right: 50px;
     }
 
 }
