--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ a {
 }
 
 .main-header {
-    text-align: center;
     padding-top: 1.5em;
     padding-bottom: 1.5em;
     background: #3acec2;
@@ -104,16 +103,31 @@ a {
     }
 
     .name,
+    .main-nav,
     .main-nav li {
         display: inline-block;
     }
 
     .name {
         width: 240px;
+        margin-right: 50px;
     }
 
     .main-nav li {
         margin-right: 12px;
     }
 
+    .col {
+        display: inline-block;
+        width: 50%;
+        margin-right: -4px;
+        vertical-align: top;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+
 }
+
+
+
+
