--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,19 @@ a {
         margin: 0 auto;
     }
 
+    .main-nav {
+        float: right;
+    }
+
+    .main-nav li {
+        float: left;
+        margin-left: 12px;
+    }
+
+    .name {
+        float: left;
+    }
+
     .feat-img {
         width: 300px;
         float: left;
