Clear and contain floats

--- a/css/style.css
+++ b/css/style.css
@@ -126,4 +126,10 @@ a {
         border: solid 1px #d9e4ea;
     }
 
+    .clearfix::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
 }
