--- a/css/style.css
+++ b/css/style.css
@@ -107,14 +107,32 @@ a {
         float: right;
     }
 
+    .name,
     .main-nav li {
         float: left;
+    }
+
+    .main-nav li {
         margin-left: 12px;
     }
 
-    .name {
-        float: left;
+    /* ---- Columns ---- */
+
+    .col {
+        float: right;
+        padding-left: 1em;
+        padding-right: 1em;
     }
+
+    .primary {
+        width: 60%;
+    }
+
+    .secondary {
+        width: 40%;
+    }
+
+    /* ------------- */
 
     .feat-img {
         width: 300px;
