Column layout with media queries

--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,14 @@ img {
         margin: 0 auto;
     }
 
-    .name {
+    .name,
+    .col {
         float: left;
+    }
+
+    .primary,
+    .secondary {
+        width: 50%;
     }
 
     .main-nav {
@@ -142,6 +148,24 @@ img {
         content: " ";
         display: table;
         clear: both;
+    }
+
+}
+
+@media (min-width: 1025px) {
+
+    .container {
+        width: 80%;
+        max-width: 1150px;
+    }
+
+    .primary {
+        width: 40%;
+    }
+
+    .secondary,
+    .tertiary {
+        width: 30%;
     }
 
 }
